examples/test/testpolicy9348.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9348
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key18: value2
      key16: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value16
          key36: value26
      podSelector:
        matchLabels:
          key6: value19
          key12: value47
          key40: value34
